--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-file-include": "^2.0.1",
     "gulp-tinypng": "^1.0.2",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-uglifyjs": "^0.6.2",
+    "browser-sync": "^1.7.2"
   },
   "dependencies": {
     "babel": "^6.23.0",
